<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">provacar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registrazione">Registrazionectivity</string>
    <string name="host">http://192.168.42.252:8080/provaServer/</string>
    <string name="regconferma">Conferma</string>
    <string name="caricamento">Caricamento in corso</string>
    <string name="regnome">Nome</string>
    <string name="reghintcognome">Cognome</string>
    <string name="reghintemail">e-mail</string>
    <string name="reghintpassword">password</string>
    <string name="reghintcofermapassword">conferma password</string>
    <string name="reginscampo">Password troppo corta</string>
    <string name="reginscampoemail">Email errata</string>

    <string-array name="array_color">
        <item>Seleziona</item>
        <item>Blu</item>
        <item>Nero</item>
        <item>Giallo</item>
    </string-array>

    <string name="regerrutenteiscritto">Utente già registrato, recupera la password</string>
    <string name="regerrrichiestainoltrata">Richiesta già inoltrata, controlla la mail</string>
    <string name="regerrgenerico">Errore generico: riprova più tardi</string>
    <string name="regrichiestaok">Ti è stata inviata un email per completare la procedura di attivazione</string>
    <string name="regerrpassword">Le password non corrispondono</string>
    <string name="ok">OK</string>
    <string name="avviso">Avviso</string>
    <string name="erroredirete">Errore di rete</string>
    <string name="loginricordami">ricordami</string>
    <string name="loginregistrati">Registrati</string>
    <string name="loginaccesso">Accesso</string>
    <string name="loginpassword">password</string>
    <string name="loginusername">username</string>
    <string name="loginerrattivazione">Attivazione non effettuata</string>
    <string name="loginincorso">Login in corso</string>
    <string name="attendi">Attendi</string>
    <string name="title_activity_inserimentodati">InserimentoDati</string>
    <string name="title_activity_posizione_gps">PosizioneGps</string>
    <string name="insautodata">Inserisci Data</string>
    <string name="insautorore">Ore</string>
    <string name="insautominuti">Minuti</string>
    <string name="insautocitta">Città</string>
    <string name="insautoinfoandata">Partenza da</string>
    <string name="insautoinforitorno">Destinazione</string>
    <string name="insautoindirizzo">Indirizzo</string>
    <string name="insautogps">GPS</string>
    <string name="insautoannulla">Annulla</string>
    <string name="insautoconferma">Conferma</string>
    <string name="insautoandata">andata</string>
    <string name="insautoritorno">ritorno</string>
    <string name="title_activity_dettagli_utente">DettagliUtenteActivity</string>
    <string name="title_activity_dettaglio_percorso">DettaglioPercorsoActivity</string>
    <string name="title_activity_inserimento_richiesta">InserimentoRichiestaActivity</string>
    <string name="title_activity_main">Items</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="orario">Orario</string>
    <string name="andataritorno">A/R</string>
    <string name="inserimentopercorso">Inserimento Percorso</string>
    <string name="inserimentorichiesta">Inserimento Richiesta</string>
    <string name="profilo">Profilo</string>
    <string name="eventiprogrammati">Eventi Programmati</string>
    <string name="viaggicompletati">Viaggi Completati</string>
    <string name="ar">A/R</string>
    <string name="andata">Andata</string>
    <string name="ritorno">Ritorno</string>
    <string name="conferma">Conferma</string>
    <string name="gps">gps</string>
    <string name="cerca">Cerca</string>
    <string name="posizioneattuale">Cerca posizione attuale</string>
    <string name="title_activity_inserimento_dettagli_veicolo">InserimentoDettagliVeicoloActivity</string>
    <string name="dettagliveicoloinfo">Compila i campi con le informazioni relative al veicolo che si desidera inserire</string>
    <string name="marca">Marca</string>
    <string name="insautomodello"></string>
    <string name="modello">Modello</string>
    <string name="versione">Versione</string>
    <string name="colore">Colore</string>
    <string name="title_activity_riepilogo_percorso">RiepilogoPercorsoActivity</string>
    <string name="percorso">Percorso</string>
    <string name="distanza">Distanza</string>
    <string name="tempo">Tempo</string>
    <string name="costo">Costo</string>
    <string name="co2">CO2</string>
    <string name="car">---</string>
    <string name="dettagliveicoloinfotitolo"></string>
    <string name="infosceltaveicolo">Se hai già inserito uno o più veicoli seleziona quello desiderato, altrimenti inserisci un nuovo veicolo</string>
    <string name="aggiungiveicolo">+Auto</string>
    <string name="avanti">Avanti</string>
    <string name="postidisp">Digita il numero di posti disponibili</string>
    <string name="inforange">Inserisci la differenza massima (in km) che sei disposto ad effetuare</string>
    <string name="targa">Targa</string>
    <string name="richiestericevute">Richieste</string>
    <string name="title_activity_richieste_ricevute">RichiesteRicevuteActivity</string>
    <string name="title_activity_visualizza_percorsi">VisualizzaPercorsiActivity</string>
    <string name="title_activity_visualizza_dettagli_percorso">VisualizzaDettagliPercorso</string>
    <string name="title_activity_richieste_in">RichiesteIn</string>
    <string name="title_activity_eventi_programmati">EventiProgrammati</string>
    <string name="title_activity_feed_back">FeedBack</string>
    <string name="eventi">Eventi</string>
    <string name="title_activity_evento">EventoActivity</string>
    <string name="feedback">Feedback</string>
    <string name="annullaric">Annulla Richiesta</string>
    <string name="posAutista">vedi posizione autista</string>
    <string name="autobus">trasporto alternativo</string>
    <string name="navigatore">Navigatore</string>
    <string name="annullaper">annulla viaggio</string>
    <string name="annullaperc">Annnulla Viaggio</string>
    <string name="eventicompletati">Eventi Completati</string>
    <string name="partecipanti">Richieste</string>
    <string name="title_activity_feed_richieste">FeedRichiesteActivity</string>
    <string name="vuota">"   "</string>
    <string name="title_activity_trasporto_alternativo">TrasportoAlternativoActivity</string>
    <string name="title_activity_posizione_autista">PosizioneAutista</string>

</resources>
