<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/riepilogoinfoco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dettagliveicoloinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/riepilogoinfotitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spmarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/riepilogoinfocosto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modello"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spmodello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/riepilogoinfotempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versione"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spversione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/riepilogoinfodistanza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colore"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spcolore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_color" />

    <TextView
        android:id="@+id/feedrichiestatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/targa"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/inserimentodettaglitarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/inserimentodettagliconferma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conferma" />

</LinearLayout>