<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    
 >
 <ImageView 
     android:id="@+id/imagelogo"
     android:layout_width="200dp"
     android:layout_height="200dp"
     android:src="@drawable/logoapp"
     />
	<TextView 
	    android:id="@+id/loginusername"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Username"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        
        android:hint="@string/loginusername"
        android:inputType="textEmailAddress" />

        
    

	<TextView 
	    android:id="@+id/loginpassword"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:text="Password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        
        android:hint="@string/loginpassword"
        android:inputType="textPassword" />
    
    <CheckBox
        android:id="@+id/ricordami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginricordami" />
<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    >
    <Button
        android:id="@+id/accedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accedi" />
    <Button
        android:id="@+id/registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginregistrati" />
</LinearLayout>
    <TextView
        android:id="@+id/esito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="200dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />



</LinearLayout>