<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RiepilogoPercorsoActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dataora"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/riepilogoinfotitolo" />

    <TextView
        android:id="@+id/riepilogotitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/riepilogoinfotitolo"
        android:layout_alignRight="@+id/map"
        android:text="@string/car"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dataora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/distanza"
        android:layout_alignParentLeft="true"
        android:text="--dataora"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/distanza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/indirizzo"
        android:layout_alignParentLeft="true"
        android:text="--distanza"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/indirizzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="52dp"
        android:text="--indirizzo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/annullaric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/map"
        android:text="@string/annullaric" />

    <Button
        android:id="@+id/autobus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/map"
        android:text="@string/autobus" />

    <TextView
        android:id="@+id/riepilogoinfotitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map"
        android:layout_alignParentTop="true"
        android:text="@string/percorso"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>