<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">

    <ToggleButton
        android:id="@+id/inserimentoautoar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="ToggleButton"
        android:textOff="Ritorno"
        android:textOn="Andata" />

    <TextView
        android:id="@+id/richiestainformazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="indica la data, l'orario e il luogo di partenza"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/richiestainfodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="data"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/inserimentorichiestadatatext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/richiestainfoorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="orario partenza"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/inserimentorichiestaoratext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/richiestainfoindirizzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="indirizzo di partenza"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/inserimentorichiestaindirizzo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" >
   
    </EditText>

    <TextView
        android:id="@+id/inserimentoautoinsveicolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infosceltaveicolo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Spinner
        android:id="@+id/spinnersceltaveicolo"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.86" />

    <Button
        android:id="@+id/inserimentoveicoliinsveicolo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/aggiungiveicolo" />
</LinearLayout>

    <TextView
        android:id="@+id/feedrichiestatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postidisp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/posti"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/anidride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inforange"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/rangekm"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/richiestaconferma"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/avanti" />
    
</LinearLayout>
</ScrollView>