<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".RiepilogoPercorsoActivity" >

      <fragment
          android:id="@+id/map"
          android:name="com.google.android.gms.maps.MapFragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_above="@+id/riepilogoinfodistanza"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/riepilogoinfotitolo" />

          <TextView
              android:id="@+id/riepilogotempo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/riepilogoinfotempo"
              android:layout_alignBottom="@+id/riepilogoinfotempo"
              android:layout_alignLeft="@+id/riepilogodistanza"
              android:text="  "
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogocosto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/riepilogoinfocosto"
              android:layout_alignBottom="@+id/riepilogoinfocosto"
              android:layout_alignLeft="@+id/riepilogotempo"
              android:text="   "
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogoinfodistanza"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/riepilogoinfotempo"
              android:layout_alignParentLeft="true"
              android:text="Distanza: "
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogoinfotempo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/riepilogoinfocosto"
              android:layout_alignParentLeft="true"
              android:text="Data e ora: 01/02/2015 08:00"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogoinfocosto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_alignParentLeft="true"
              android:layout_marginBottom="52dp"
              android:text="Range: 10 Km"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogoinfoco2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/riepilogocosto"
              android:text="Posti: 3"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogoco2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/riepilogocosto"
              android:layout_below="@+id/riepilogocosto"
              android:text="   "
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogodistanza"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/riepilogotempo"
              android:layout_alignRight="@+id/map"
              android:layout_toRightOf="@+id/riepilogoinfodistanza"
              android:text="@string/car"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/riepilogoinfotitolo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/map"
              android:layout_alignParentRight="true"
              android:layout_alignParentTop="true"
              android:text="@string/percorso"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <Button
              android:id="@+id/riepilogoconferma"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_alignRight="@+id/riepilogodistanza"
              android:text="@string/conferma" />
    
</RelativeLayout>
